Removed link underline from wordart

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -816,6 +816,10 @@ label[for="EgressRegionCombo"], label[for="EgressRegion"] {
   }
 }
 
+.wordart-link {
+  text-decoration: none !important;
+}
+
 .wordart {
   display: inline-block;
   .ie7-inline-block();
