--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6742,6 +6742,9 @@ body[dir="rtl"] #language-pane .language-item {
 #about-pane .client-version {
   font-size: 60%;
 }
+.wordart-link {
+  text-decoration: none !important;
+}
 .wordart {
   display: inline-block;
   *display: inline;
