--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -39,7 +39,7 @@
 // "If clicked, this will be engaged."
 //    - unselected Happy/sad, checkboxes, egress dropdown
 //    - no side-effects (until form is submitted or whatever)
-@psiEngageable: #90A959;
+@psiEngageable: #75B7AB;
 
 // "If clicked, irrevocable action will occur."
 //    - Apply, Submit
@@ -54,7 +54,7 @@
 
 // "This clickable thing is hovered."
 //    - For all clickable things? Maybe for hovered textbox?
-@psiClickHover: #D4E4BC;
+@psiClickHover: #BCDAE4;
 
 //
 // Other colors and uses
@@ -70,7 +70,7 @@
 @psiLinkHover: darken(@psiClickHover, 20%);
 
 // Some items are overwhelmed by the engageable color, so we need a lighter variant
-@psiEngageableLight: lighten(@psiEngageable, 40%);
+@psiEngageableLight: lighten(@psiEngageable, 30%);
 
 // Aesthetically, we want the header and the active nav item to be the same color.
 // This is effectively the main app color.
