Fixed PNG color profiles. Fixed icons. Matched color.

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -18,9 +18,9 @@
 
 @import "_rtl-support.less";
 
-// Based on this palette: https://coolors.co/app/b63f1e-1b7b9c-75b7ab-16627f-bcdae4
+// Based on this palette: https://coolors.co/app/B83E1F-1b7b9c-75b7ab-16627f-bcdae4
 
-// Main red in P logo: #B63F1E
+// Main red in P logo: #B83E1F
 // Three blues sometimes used for Psiphon stuff: Light: #1B7B9C, Shaded: #16627F, Dark: #052239
 
 //
@@ -34,7 +34,7 @@
 //    - Clicking must produce no side-effects (besides navigation)
 //    - Exception: non-active nav items should be included under this, but for
 //      aesthetic reasons we're leaving them white.
-@psiLink: #B63F1E;
+@psiLink: #B83E1F;
 
 // "If clicked, this will be engaged."
 //    - unselected Happy/sad, checkboxes, egress dropdown
@@ -860,8 +860,8 @@ label[for="EgressRegionCombo"], label[for="EgressRegion"] {
     font-size: 3em;
     line-height: 1em;
     font-weight: 900;
-    color: #B63F1E;
-    border-color: #B63F1E;
+    color: @psiLink;
+    border-color: @psiLink;
     border-bottom-width: 3px;
     border-bottom-style: solid;
     text-shadow: 3px 3px #D9D2BE;
