--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -260,7 +260,7 @@ body {
   background-color: #fbfcf9;
 }
 a {
-  color: #b63f1e;
+  color: #b83e1f;
   text-decoration: none;
 }
 a:hover,
@@ -2573,7 +2573,7 @@ input[type="submit"].btn.btn-mini {
 .btn-link {
   border-color: transparent;
   cursor: pointer;
-  color: #b63f1e;
+  color: #b83e1f;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -2914,7 +2914,7 @@ input[type="submit"].btn.btn-mini {
 .nav-list > .active > a:focus {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
-  background-color: #b63f1e;
+  background-color: #b83e1f;
 }
 .nav-list [class^="icon-"],
 .nav-list [class*=" icon-"] {
@@ -2997,7 +2997,7 @@ input[type="submit"].btn.btn-mini {
 .nav-pills > .active > a:hover,
 .nav-pills > .active > a:focus {
   color: #ffffff;
-  background-color: #b63f1e;
+  background-color: #b83e1f;
 }
 .nav-stacked > li {
   float: none;
@@ -3052,8 +3052,8 @@ input[type="submit"].btn.btn-mini {
   border-radius: 6px;
 }
 .nav .dropdown-toggle .caret {
-  border-top-color: #b63f1e;
-  border-bottom-color: #b63f1e;
+  border-top-color: #b83e1f;
+  border-bottom-color: #b83e1f;
   margin-top: 6px;
 }
 .nav .dropdown-toggle:hover .caret,
@@ -4247,7 +4247,7 @@ input[type="submit"].btn.btn-mini {
 }
 a.thumbnail:hover,
 a.thumbnail:focus {
-  border-color: #b63f1e;
+  border-color: #b83e1f;
   -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
@@ -6136,7 +6136,7 @@ textarea {
   margin: auto;
 }
 .psiphon-header .banner.long-connecting-show div a {
-  color: #ea9983;
+  color: #eb9a85;
   font-weight: bold;
 }
 .psiphon-header .header-nav-join {
@@ -6777,8 +6777,8 @@ body[dir="rtl"] #language-pane .language-item {
   font-size: 3em;
   line-height: 1em;
   font-weight: 900;
-  color: #B63F1E;
-  border-color: #B63F1E;
+  color: #b83e1f;
+  border-color: #b83e1f;
   border-bottom-width: 3px;
   border-bottom-style: solid;
   text-shadow: 3px 3px #D9D2BE;
