--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -786,6 +786,16 @@ label[for="EgressRegionCombo"], label[for="EgressRegion"] {
     }
   }
 
+  .priority-2 {
+    .message {
+      font-weight: bold;
+    }
+
+    .showing-priority-0& {
+      background-color: @infoBackground;
+    }
+  }
+
   // We want the timestamp column to be only wide enough to fit content
   .timestamp {
     width: 1%;
