added domain authentication; fixed validation errors; cleaned up strings; ensured error-text classes are properly applied to username/password/domain fields

--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6606,7 +6606,10 @@ body[dir="rtl"] .vpn-incompatible-msg.label {
   width: 5em;
 }
 .local-port-unique,
-.upstream-proxy-set-match {
+.upstream-proxy-hostname-port-match,
+.upstream-proxy-username-password-match,
+.upstream-proxy-domain-requires-authentication,
+.upstream-proxy-authentication-requires-hostname-and-port {
   color: #b94a48;
 }
 #EgressRegion {
