--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -632,7 +632,11 @@ textarea {
   width: 5em;
 }
 
-.local-port-unique, .upstream-proxy-set-match {
+.local-port-unique,
+.upstream-proxy-hostname-port-match,
+.upstream-proxy-username-password-match,
+.upstream-proxy-domain-requires-authentication,
+.upstream-proxy-authentication-requires-hostname-and-port {
   .text-error;
 }
 
