Rough HTML and JS support for PsiCash

--- a/src/webui/css/main.less
+++ b/src/webui/css/main.less
@@ -889,6 +889,17 @@ label[for="EgressRegionCombo"], label[for="EgressRegion"] {
   }
 }
 
+/* PSICASH */
+
+#psicash-block {
+  > div {
+    border-top: thick red solid;
+    border-bottom: thick red solid;
+  }
+  .button {
+    width: 100%;
+  }
+}
 
 /* MISCELLANEOUS AND HELPERS */
 
