Improve UI for IE 7-9
Having conditional comments on the html element forces the browser control into compatibility view, even though it doesn't for the actual browser.

--- a/src/webui/css/lteIE7.css
+++ b/src/webui/css/lteIE7.css
@@ -44,3 +44,11 @@ child elements.
      the window gets wider. */
   width: 97%;
 }
+
+/* IE7 doesn't wrap <button> text by default. So make the child element inline-block. https://stackoverflow.com/a/17622706/729729 */
+button > span {
+  display: inline-block;
+  /* These styles are from the .ie7-inline-block() mixin */
+  *display: inline;
+  *zoom: 1;
+}
